# CUDA-MPI-GPU-Cluster-Programming

./: .gitignore  Makefile.mpi.template  README.md  all_runs.csv  analysis.ipynb  analysis.md  best_runs.csv  best_runs.md  collect_p_docs.sh  collect_project.sh  create_local_cache.sh  file_inventory.csv  hw1-perevicius-mykolas.tgz  learned_patterns.txt  log_analysis.py  log_metrics.duckdb  pc_v4_environment_info.txt  project-nix-shell.sh  project.txt  project_docs.md  requirements.txt  restructure.sh  scaffold_all.sh  shell.nix  stats.csv  stats.parquet  summary.md
assignments/hw1/: CMakeLists.txt  package.sh  summary.md
final_project/: AI.md  AI.txt  CMakeLists.txt  DISCUSSION.md  Makefile.original_v4_v5  PROBLEMS.txt  README.md  RESEARCH.md  conv_test
final_project/docs/: AlexNet_MPI_CUDA_Design.md
final_project/logs/: summary_20250508_183926_nixos.csv  summary_20250508_184638_nixos.csv  summary_20250508_185059_nixos.csv  summary_20250508_185132_nixos.csv  summary_20250509_105256_nixos.csv  summary_20250509_105320_DESKTOP-B5PMJB5.csv  summary_20250509_112555_DESKTOP-B5PMJB5.csv  summary_20250509_114103_nixos.csv  summary_20250509_115115_nixos.csv  summary_20250509_115507_nixos.csv  summary_20250509_115808_DESKTOP-B5PMJB5.csv  summary_20250514_113105_MykoPC.csv  summary_20250514_175444_nixos.csv  summary_20250514_175646_nixos.csv  summary_20250515_125030_nixos.csv  summary_20250515_133638_nixos.csv  summary_fullsuite_20250509_124206.csv  summary_fullsuite_20250509_124616.csv  summary_multi_20250509_122238.csv  summary_multi_20250509_123153.csv
final_project/old_logs/: generate_graphs.py  run_summary_20250506_142151.csv  run_summary_20250506_160835.csv  summary_nixos_20250508_182322.csv
final_project/src/: layers.cu
final_project/v1_serial/: Makefile  README_TODO.md  template
(+151 files in other folders)
